--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -418,7 +418,7 @@
 
 
 
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
         <script src="offcanvas.js"></script>
         <script src="script.js"></script>
