--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item  bg-secondary">
+                <div class="carousel-item  bg-primary">
                     <div class=" ">
                         <div class="row">
                             <div class="col-4 ms-3">
